# curvelens-core

./: .gitignore  AGENTS.md  GOLD_SETUP.md  HEARTBEAT.md  IDENTITY.md  README.md  SETUP.md  SOUL.md  WTI_PARITY.md
ccvm/: .env.example  AGENTS.md  IDENTITY.md  pyproject.toml  requirements.txt
ccvm/app/: dashboard.py
ccvm/config/: cron.example  sources.yaml
ccvm/config/markets/: brent.yaml  copper.yaml  corn.yaml  gold.yaml  nasdaq100.yaml  russell2000.yaml  silver.yaml  (+2 more)
ccvm/scripts/: auth_etrade.py  check_lineage.py  collect_day.py  compute_features.py  extract_catalysts.py  generate_report.py  import_ice_brent_reports.py  normalize_day.py  notify.py  run_pipeline.py
ccvm/tests/: test_analysis_workflow.py  test_analytics.py  test_barchart_options.py  test_brent_product.py  test_bronze_parsers.py  test_catalyst_dedup.py  test_catalysts.py  test_cme_bulletin_sections.py  test_collectors.py  test_copper_product.py  test_corn_product.py  test_cot_features.py  test_dashboard_news.py  test_deployment_layout.py  test_eia_seasonal.py  test_equity_index_products.py  test_etrade_options.py  test_expiry_calendar.py  test_gold_product.py  test_history_context.py  test_ice_report_center_import.py  test_knowledge_loader.py  test_macro_context.py  test_notify_messages.py  test_oi_features.py  test_probability_chart.py  test_product_profile.py  test_quality_report.py  test_query_toolkit.py  test_reference.py  test_rnd.py  test_scenarios.py  test_schemas.py  test_scorecard.py  test_silver_normalizers.py  test_silver_product.py  test_triggers.py  test_wti_history_migration.py
(+180 files in other folders)
